# studies_parallel

./: .gitignore  CMakeCache.txt  CMakeLists.txt  internet_test.c  lab_1.cbp  main.cpp  part2.cpp  part2_basic.cpp  part2_line_lenght.cpp  part2_reduction.cpp  part_1.cpp
